<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    tools:context=".view.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        tools:ignore="PrivateResource">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textServerDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:text="@string/server_detail"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textIPAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textServerDetail"
                android:layout_margin="10dp"
                android:text="@string/ip_address"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valueIPAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textServerDetail"
                android:layout_margin="10dp"
                android:layout_toEndOf="@id/textIPAddress"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textPortNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textIPAddress"
                android:layout_margin="10dp"
                android:text="@string/port_number"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valuePortNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textIPAddress"
                android:layout_margin="10dp"
                android:layout_toEndOf="@id/textPortNumber"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardview"
        android:layout_margin="10dp"
        android:text="@string/instructions"
        android:textStyle="italic" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textNote"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:text="@string/start_server"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:padding="20sp"/>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start"
        android:textSize="20sp"
        android:typeface="monospace"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMessage"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:typeface="sans"
        android:textStyle="italic" />

</RelativeLayout>